--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
-sudo: required
-services:
-  - docker
+# sudo: required
+# services:
+#   - docker
 
-before_install:
-  - docker build -t alan/docker-react -f Dockerfile.dev .
+# before_install:
+#   - docker build -t alan/docker-react -f Dockerfile.dev .
 
-script:
-  - docker run -e CI=true alan/docker-react npm run test
+# script:
+#   - docker run -e CI=true alan/docker-react npm run test
 
