--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,9 @@
-language: node_js
- node_js:
- - "stable"
- cache:
- directories:
-   - node_modules
- script:
- - npm test
- - npm run build
-# sudo: required
-# services:
-#   - docker
+sudo: required
+services:
+  - docker
 
-# before_install:
-#   - docker build -t alan/docker-react -f Dockerfile.dev .
+before_install:
+  - docker build -t alan/docker-react -f Dockerfile.dev .
 
-# script:
-#   - docker run -e CI=true alan/docker-react npm run test
-
+script:
+  - docker run -e CI=true alan/docker-react npm run test
